--- a/mission/트리.html
+++ b/mission/트리.html
@@ -40,6 +40,21 @@
 
       console.log(triangle);
     }
+
+    for(let i=1; i<= line; i++){
+      let triangle = "";
+      
+      for (let k = 1; k < 3; k++) {
+        triangle = triangle + " ";
+      }
+
+    	for(let j=1; j<9; j++){
+        triangle = triangle + "*";
+	}
+
+  console.log(triangle);
+}
+
     
   </script>
 </html>
