룰렛 만들기 1차 작업

--- a/mission/룰렛.html
+++ b/mission/룰렛.html
@@ -26,7 +26,9 @@
         }, 300 * (list))
         // 80 수 이상일 때
         } else if (list >= 80) {
-       
+            setInterval(() => {
+                console.log(list)
+            },300 * (list + 1));
         }
     }
 </script>
